--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "huggingface/spaces/yolov3_adas_pruned_0_9"]
+	path = huggingface/spaces/yolov3_adas_pruned_0_9
+	url = https://huggingface.co/spaces/inaccel/yolov3_adas_pruned_0_9
 [submodule "spec"]
 	path = spec
 	url = https://github.com/inaccel/runtime-spec
