--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "huggingface/spaces/resnet50"]
+	path = huggingface/spaces/resnet50
+	url = https://huggingface.co/spaces/inaccel/resnet50
 [submodule "huggingface/spaces/yolov3_adas_pruned_0_9"]
 	path = huggingface/spaces/yolov3_adas_pruned_0_9
 	url = https://huggingface.co/spaces/inaccel/yolov3_adas_pruned_0_9
