Redirect to hugging face

--- a/gradio/.env
+++ b/gradio/.env
@@ -1,5 +1,6 @@
 email=info@inaccel.com
 host=vitis-ai.inaccel.com
+huggingface=https://huggingface.co/inaccel
 image=inaccel/vitis-ai
 log_level=info
 tag=gradio
