--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule "huggingface/models/yolov3_adas_pruned_0_9"]
 	path = huggingface/models/yolov3_adas_pruned_0_9
 	url = https://huggingface.co/inaccel/yolov3_adas_pruned_0_9
+[submodule "huggingface/spaces/inception_v1_tf"]
+	path = huggingface/spaces/inception_v1_tf
+	url = https://huggingface.co/spaces/inaccel/inception_v1_tf
 [submodule "huggingface/spaces/resnet50"]
 	path = huggingface/spaces/resnet50
 	url = https://huggingface.co/spaces/inaccel/resnet50
